update new project

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <div class="card">
                 <img src="icone-thelastofus.png">
                 <h5>The Last Of Us</h5>
-                <p>Projeto criado na semana do canal devemdobro, utilizei HTML, CSS e Javascript, projeto feito a fim de melhorar minhas habilidades com estas tecnologias.</p>
-                <a>Ver Projeto</a>
+                <p>Projeto responsivo, criado na semana do canal devemdobro, utilizei HTML, CSS e Javascript, projeto feito a fim de melhorar minhas habilidades com estas tecnologias.</p>
+                <a href="https://lucasmouradev.github.io/project-thelastofus/" target="_blank">Ver Projeto</a>
             </div>
 
 
